# CMirror

./: .gitignore  CMakeLists.txt  DataStructureREADME.md  Point.cpp  Point.h  README.md  TestC.cpp  a.out  array.h  cChar.txt  cHistory.txt  cycle.h  dynicMemory.h  funAddr.h  hello.h  input.h  length.h  main  main.c  mainCpp  mainCpp.cpp  memoryAddr.h  pointer.h  print.h  printHello.c  structs.h  tasks  testStudent.h
CMirrorXCode/: README.md
CMirrorXCode/CMirrorXCode/: array.cpp  array.hpp  main.cpp  point.cpp  point.hpp  tArray.cpp  tArray.hpp  tBasic.cpp  tBasic.hpp  tClass.cpp  tClass.hpp  tFunc.cpp  tFunc.hpp  tPoint.cpp  tPoint.hpp  tStruct.cpp  tStruct.hpp  testStruct.cpp  testStruct.hpp
CMirrorXCode/CMirrorXCode.xcodeproj/: project.pbxproj
CMirrorXCode/CMirrorXCode.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CMirrorXCode/CMirrorXCode/tClass/: tClassPerson.hpp  tClassPoint.hpp  tClassPoint2.cpp
CPPVsStudio/ConsoleApplication1/: ConsoleApplication1.sln
CPPVsStudio/ConsoleApplication1/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  tArray.cpp  tArray.h  tBasic.cpp  tBasic.h
CPPVsStudio/ConsoleApplication1/ConsoleApplication1/Debug/: tbasic.obj.enc  vc142.idb
CPPVsStudio/ConsoleApplication1/ConsoleApplication1/tClass/: tClassPerson.cpp
CPPVsStudio/ConsoleApplication1/Debug/: ConsoleApplication1.ilk
a.out.dSYM/Contents/Resources/DWARF/: a.out
c/: circle.c
cPlus/: cPlus.txt
imporve/: .gitignore  CGrammar.txt  cConst.txt  main  main.c  test.c  test.h
imporve/chooseSort/: chooseSort.c  chooseSort.h  testVariable.c
imporve/sizeof/: sizeOf.c
imporve/socketClients/: socketclient.h
imporve/socketclient/: socketclient.c
imporve/testArray/: testArray.c  testArray.h
imporve/testChar/: testChar.c  testChar.h
imporve/testConstant/: testConstant.c  testConstant.h
imporve/testFile/: testFile.c  testFile.h
imporve/testHelloWorld/: testHelloWorld.c  testHelloWorld.h
imporve/testPointer/: testPointer.c  testPointer.h
imporve/testRadix/: testRadix.c  testRadix.h
imporve/testStatic/: testStatic.c  testStatic.h
imporve/testStruct/: testStruct.c  testStruct.h  testStuct.h
imporve/testUnion/: testUnion.c  testUnion.h
imporve/testVariables/: testVariable.c  testVariable.h
imporve/testVariables/sizeof/: sizeOf.h
imporve/testvariable/: chooseSort.h  testVariable.c  testVariable.h
imporve/typedefTest/: testTypedef.c  testTypedef.h
main.dSYM/Contents/Resources/DWARF/: main
mainCpp.dSYM/Contents/: Info.plist
mainCpp.dSYM/Contents/Resources/DWARF/: mainCpp
tasks.dSYM/Contents/Resources/DWARF/: tasks
(+10 files in other folders)
